# rpi-devices

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: CI.yml
examples/colour-on-press/: Cargo.toml
examples/colour-on-press/src/: main.rs
examples/colour-on-press/src/models/: traits.rs
examples/mini-display-user-interface/: common.rs  config.rs  main.rs
examples/mini-display-user-interface/models/: mod.rs
examples/mini-display-user-interface/models/interfaces/: button.rs  common.rs  dummy.rs  menu.rs  mod.rs
examples/mini-display-user-interface/models/traits/: mod.rs
examples/spi-st7789-rpi-zero-w/src/: main.rs
examples/user-interface/: main.rs
examples/user-interface/models/: mod.rs
examples/user-interface/models/interfaces/: mod.rs
rpi-display-mipidsi/: Cargo.toml
rpi-display-mipidsi/src/: foreign_types.rs  lib.rs
rpi-display-mipidsi/src/func/: bmp.rs  crop.rs  fs.rs  image_conversions.rs  mod.rs
rpi-display-mipidsi/src/func/transitions/: base.rs  dissolve.rs  mod.rs  sweep.rs  transverse.rs
rpi-display-mipidsi/src/models/: mod.rs
rpi-display-mipidsi/src/models/display/: base.rs  mod.rs
rpi-display-mipidsi/src/models/display/implementations/: clear.rs  mod.rs
rpi-display-mipidsi/src/models/display/implementations/geometries/: line.rs  mod.rs  shapes.rs
rpi-display-mipidsi/src/models/display/implementations/images/: bmp.rs  mod.rs  raw.rs
rpi-display-mipidsi/src/models/display/implementations/interface/: mod.rs
rpi-display-mipidsi/src/models/display/implementations/text/: defaults.rs  mod.rs  monotype.rs  reexports.rs
rpi-display-mipidsi/src/models/display/implementations/transition/: mod.rs
rpi-display-mipidsi/src/models/images/: mod.rs  owned.rs
rpi-display-mipidsi/src/models/panels/: mod.rs  st7735.rs
rpi-display-mipidsi/src/models/traits/: draw_transition.rs  interface.rs  iter_pixels.rs  marker.rs  mod.rs
rpi-errors/: Cargo.toml
rpi-errors/src/errors/: mod.rs  traits.rs
rpi-errors/src/errors/implementations/: bmp.rs  display.rs  into_rpi_result.rs  mod.rs
rpi-gpio/: .pre-commit-config.yaml  Cargo.toml
rpi-gpio/src/: lib.rs
rpi-gpio/src/config/: mod.rs
rpi-gpio/src/func/: mod.rs  termination.rs
rpi-gpio/src/models/: button.rs  led_rgb.rs  mod.rs  pwm_device.rs
rpi-gpio/src/models/traits/: from_tuple_rgb.rs  marker.rs  mod.rs  rgb_between.rs  rgb_transition.rs
rpi-logger/: Cargo.toml
rpi-logger/src/: config.rs  lib.rs
rpi-system/: Cargo.toml
rpi-system/src/: lib.rs
src/: lib.rs
src/boards/: mod.rs  pimoroni_display_hat_mini.rs  pimoroni_enviro_plus.rs
tests/: physical.rs
