[package]
name = "rpi-devices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "colour-on-press"
path = "./examples/colour-on-press/src/main.rs"
required-features = ["pimoroni-display-hat-mini"]

[features]
bme280 = [] # DISABLED for now - `embedded_hal` alpha versionings had a lot of conflicts.
# bme280 = ["dep:bme280"]
ltr-559 = ["dep:ltr-559"]
pimoroni-display-hat-mini = ["dep:async-mutex", "rpi-gpio/pimoroni-display-hat-mini", "bmp", "library"]
pimoroni-enviro-plus = ["dep:async-mutex", "ltr-559", "bme280", "bmp", "library"]
bmp = ["rpi-display-mipidsi/bmp"]
text = ["rpi-display-mipidsi/text"]
plot = ["rpi-display-mipidsi/plot"]
library = ["rpi-display-mipidsi/library"]

[dependencies]
async-mutex = { version = "1.4.0", optional = true }
# bme280 = { version = "0.4.4", optional = true }
embedded-graphics = "0.8.1"
lazy_static = "1.4.0"
ltr-559 = { version = "0.1.1", optional = true }
rpi-display-mipidsi = { path = "rpi-display-mipidsi" }
rpi-errors = { path = "rpi-errors" }
rpi-gpio = { path = "rpi-gpio" }
rpi-system = { path = "rpi-system" }
rppal = { version = "0.15.0", features = ["hal"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["time", "rt-multi-thread", "macros", "signal"] }

[dev-dependencies]
async-trait = "0.1.74"
serial_test = "2.0.0"
