[package]
name = "rpi-display-mipidsi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-mutex = "1.4.0"
async-trait = "0.1.74"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.1"
embedded-hal = "0.2.7"
mipidsi = "0.7.1"
rpi-errors = { path = "../rpi-errors", features=["display"] }
rpi-gpio = { path = "../rpi-gpio" }
rppal = { version = "0.15.0", features = ["hal"] }
