[package]
name = "rpi-display-mipidsi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bmp = ["dep:tinybmp", "rpi-errors/bmp"]
text = ["dep:embedded-text"]
plot = ["dep:embedded-plots"]
library = ["dep:gxhash"]

[dependencies]
async-mutex = "1.4.0"
async-trait = "0.1.74"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.1"
embedded-hal = "0.2.7"
embedded-plots = { version = "0.2.0", optional = true }
embedded-text = { version = "0.7.0", features = ["ansi"], optional = true }
gxhash = { version = "2.2.4", optional = true }
mipidsi = "0.7.1"
rpi-errors = { path = "../rpi-errors", features=["display"] }
rpi-gpio = { path = "../rpi-gpio" }
rppal = { version = "0.15.0", features = ["hal"] }
tinybmp = { version = "0.5.0", optional = true }
tokio = { version = "1.34.0", features = ["fs"] }
