[package]
name = "rpi-errors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
display = ["dep:mipidsi", "dep:display-interface"]

[dependencies]
display-interface = { version = "0.4.1", optional = true }
mipidsi = { version = "0.7.1", optional = true }
rppal = "0.15.0"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["rt"] }
