[package]
name = "rpi-gpio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
pimoroni-display-hat-mini = ["dep:async-mutex"]

[dependencies]
async-mutex = { version = "1.4.0", optional = true }
embedded-graphics = "0.8.1"
embedded-hal = "0.2.7"
lazy_static = "1.4.0"
rpi-errors = { version = "0.1.0", path = "../rpi-errors" }
rppal = { version = "0.16.1", features = ["hal"] }
tokio = { version = "1.34.0", features = ["time", "rt-multi-thread", "macros", "signal"] }
