[package]
name = "rpi-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
jsonl_logging = ["dep:serde_json"]

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.193" }
serde_json = { version = "1.0.108", optional = true }
time = { version = "0.3.30", features = ["formatting", "macros", "serde"] }
