[package]
name = "colour-on-press"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
rpi-devices = { version = "0.1.0", path = "../..", features = ["pimoroni-display-hat-mini"] }
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
